Improve code a bit

--- a/block/index.js.mustache
+++ b/block/index.js.mustache
@@ -17,24 +17,17 @@ import './style.scss';
 /**
  * Internal dependencies
  */
-import json from './block.json';
+import metadata from './block.json';
 import Edit from './edit';
-
-const {name } = json;
 
 /**
  * Every block starts by registering a new block type definition.
  *
  * @see https://developer.wordpress.org/block-editor/reference-guides/block-api/block-registration/
  */
-registerBlockType(name, {
-	/**
-	 * @see ./edit.js
-	 */
-	edit: Edit,
-
-	/**
-	 * @see ./save.js
-	 */
-	save: () => null
-});
+registerBlockType( metadata, {
+    /**
+    * @see ./edit.js
+    */
+    edit: Edit
+} );
