Improve code a bit

--- a/plugin/class-DynamicBlock.php.mustache
+++ b/plugin/class-DynamicBlock.php.mustache
@@ -1,6 +1,6 @@
 <?php
 
-namespace {{slugPascalCase}}
+namespace {{slugPascalCase}};
 
 /**
  * Class for easily registering a dynamic Gutenberg block
