Improve code a bit

--- a/plugin/$slug.php.mustache
+++ b/plugin/$slug.php.mustache
@@ -26,6 +26,6 @@ include_once('class-DynamicBlock.php');
 ${{namespaceSnakeCase}} = new {{slugPascalCase}}\DynamicBlock('{{slugSnakeCase}}','{{namespaceSnakeCase}}_{{slugSnakeCase}}_render_callback');
 
 function {{namespaceSnakeCase}}_{{slugSnakeCase}}_render_callback($attributes){
-	$html = '<div '.get_block_wrapper_attributes().'>'.esc_html_e( 'Dynamic Block Example', '{{textdomain}}' ).'</div>';
+	$html = '<div '.get_block_wrapper_attributes().'>'.esc_html( 'Dynamic Block Example', '{{textdomain}}' ).'</div>';
     return $html;
 }
